# LauraGPT

LauraGPT/: app.py  pyproject.toml
LauraGPT/static/src/css/: input.css
LauraGPT/templates/: index.html
